Refactor code structure and updated certifications and experience

--- a/src/index.css
+++ b/src/index.css
@@ -13,7 +13,7 @@
 :root {
   --color-bg: #16191d;
   --color-bg-variant: #3f3f3f;
-  --color-primary: #1bf7f3;
+  --color-primary: #ff961f;
   --color-white: #fff;
   --color-primary-variant: rgba(77, 181, 255, 0.4);
   --color-light: rgba(255, 255, 255, 0.6);
